[gd_scene load_steps=11 format=2]

[ext_resource path="res://Button.gd" type="Script" id=1]
[ext_resource path="res://World/grassimage.png" type="Texture" id=2]
[ext_resource path="res://Tilesets/Water.tres" type="TileSet" id=3]
[ext_resource path="res://Tilesets/Water Artifacts.tres" type="TileSet" id=4]
[ext_resource path="res://World/Tree.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tilesets/DirtMap.tres" type="TileSet" id=6]
[ext_resource path="res://World/Bush.tscn" type="PackedScene" id=7]
[ext_resource path="res://Tilesets/Nature.tres" type="TileSet" id=8]
[ext_resource path="res://Fonts/mainmenufont.tres" type="DynamicFont" id=9]
[ext_resource path="res://CreditsButton.gd" type="Script" id=10]

[node name="Node2D" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 163, 90 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 70, 0, 360, 180 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 393218, 0, 0, 393219, 0, 0, 393234, 0, 0, 393235, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458770, 0, 0, 458771, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524307, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589843, 0, 0, 655379, 0, 0 )

[node name="dirt" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65532, 0, 0, 65533, 0, 1, 65534, 0, 2, 131068, 0, 131072, 131069, 0, 131073, 131070, 0, 9, 131071, 0, 1, 65536, 0, 2, 196606, 0, 131072, 196607, 0, 131073, 131072, 0, 196613, 131073, 0, 7, 196609, 0, 196612, 196610, 0, 196609, 196611, 0, 6, 196612, 0, 1, 196613, 0, 1, 196614, 0, 1, 196615, 0, 2, 262147, 0, 131072, 262148, 0, 131073, 262149, 0, 131073, 262150, 0, 131073, 262151, 0, 9, 262152, 0, 1, 262153, 0, 1, 262154, 0, 1, 262155, 0, 1, 262156, 0, 1, 262157, 0, 1, 262158, 0, 2, 327687, 0, 65536, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 65537, 327694, 0, 65538, 393223, 0, 65536, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65538, 458759, 0, 131072, 458760, 0, 131073, 458761, 0, 131073, 458762, 0, 131073, 458763, 0, 131073, 458764, 0, 131073, 458765, 0, 131073, 458766, 0, 9, 458767, 0, 2, 524302, 0, 65536, 524303, 0, 65538, 589838, 0, 65536, 589839, 0, 131077, 589840, 0, 2, 655374, 0, 131072, 655375, 0, 65542, 655376, 0, 65538, 720911, 0, 131072, 720912, 0, 9, 720913, 0, 2, 786448, 0, 131072, 786449, 0, 65543, 851985, 0, 131076, 851986, 0, 2, 917521, 0, 131072, 917522, 0, 131074 )

[node name="nature" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65546, 6, 0, 131080, 7, 0, 131081, 3, 0, 262142, 0, 0, 262145, 0, 0, 393223, 4, 0, 458752, 0, 0, 458766, 4, 0, 589822, 0, 0, 524295, 3, 0, 524299, 4, 0, 589830, 10, 0, 655362, 10, 0, 655366, 0, 0, 720898, 10, 0 )

[node name="Water artifacts" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -65532, 1, 0, 1, 23, 0, 2, 26, 0, 3, 31, 0, 4, 1, 0, 5, 4, 0, 6, 5, 0, 9, 28, 0, 13, 22, 0, 15, 1, 0, 65539, 22, 0, 65541, 7, 0, 65542, 6, 0, 65543, 34, 0, 65544, 26, 0, 65545, 29, 0, 65549, 22, 0, 65550, 10, 0, 131075, 23, 0, 131076, 26, 0, 131077, 26, 0, 131078, 26, 0, 131079, 29, 0, 131085, 23, 0, 131086, 31, 0, 131088, 11, 0, 196622, 23, 0, 196623, 31, 0, 262159, 22, 0, 262160, 1, 0, 262162, 10, 0, 327681, 21, 0, 327682, 24, 0, 327683, 24, 0, 327684, 27, 0, 327695, 23, 0, 327696, 31, 0, 393216, 21, 0, 393217, 32, 0, 393220, 30, 0, 393221, 24, 0, 393222, 27, 0, 393232, 23, 0, 393233, 31, 0, 393234, 2, 0, 458752, 22, 0, 458758, 28, 0, 458769, 22, 0, 458773, 2, 0, 524288, 22, 0, 524294, 28, 0, 524305, 23, 0, 524306, 31, 0, 524307, 11, 0, 589824, 22, 0, 589828, 34, 0, 589829, 26, 0, 589830, 29, 0, 589842, 22, 0, 655360, 23, 0, 655361, 26, 0, 655362, 26, 0, 655363, 26, 0, 655364, 29, 0, 655378, 22, 0 )

[node name="StaticBody2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 40, 36 )

[node name="StaticBody2D2" parent="." instance=ExtResource( 5 )]
position = Vector2( 279, 157 )

[node name="StaticBody2D3" parent="." instance=ExtResource( 5 )]
position = Vector2( -4, 168 )

[node name="StaticBody2D4" parent="." instance=ExtResource( 5 )]
position = Vector2( 196, 29 )

[node name="StaticBody2D5" parent="." instance=ExtResource( 5 )]
position = Vector2( 87, 91 )

[node name="Bush2" parent="." instance=ExtResource( 7 )]
position = Vector2( 3, 91 )

[node name="Bush3" parent="." instance=ExtResource( 7 )]
position = Vector2( 302, 196 )

[node name="Label" type="Label" parent="."]
margin_left = 65.0
margin_top = 70.0
margin_right = 1565.0
margin_bottom = 463.0
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Ruimte voor
de IJssel"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="."]
margin_left = -16.0
margin_top = 121.0
margin_right = 1370.0
margin_bottom = 251.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Credits"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Credits"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 250.0
margin_top = -140.0
margin_right = 1150.0
margin_bottom = 270.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 147.0
margin_top = 106.0
margin_right = 203.0
margin_bottom = 126.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 107.0
margin_top = 110.0
margin_right = 1493.0
margin_bottom = 371.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.117647, 0.486275, 0.721569, 1 )
text = "Klik hier"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Credits/Button" to="Credits/Button" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Credits/Button" to="Credits/Button" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Credits/Button" to="Credits/Button" method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Button" to="Button" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="Button" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
